[build-system]
requires = ["setuptools>=67.0", "wheel>=0.38.4"]
build-backend = "setuptools.build_meta"

[project]
name = "with_html"
version = "0.0.1"
authors = [
  { name="Mark Keller", email="mark_keller@hms.harvard.edu" },
]
description = "(ab)use of context managers"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
keywords = ["single-cell", "quality-control", "scverse"]
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Science/Research',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
]
dependencies = [
  'anywidget==0.9.13'
  # esbuild-py?
]

[project.optional-dependencies]
dev = [
  'build==0.1.0',
  'pytest>=6.2.4',
  'flake8==3.8.4',
  'jupyterlab',
]

[project.urls]
repository = "https://github.com/keller-mark/with-html"

# Reference: https://stackoverflow.com/a/74421415
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Reference: https://stackoverflow.com/a/50156706
[tool.pytest.ini_options]
pythonpath = [
  "src"
]
